# PicoMIDIKeyboard

./: CMakeLists.txt  README.md  main.cpp  midi_config.h  usb_descriptors.c
assets/readmes/: pt-br.md
